Q3/Kubernetes/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: go
  name: go
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: go
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: go
    spec:
      containers:
        - image: timchencloud/shortener:latest
          name: shortener
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
