Q3/Kubernetes/go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /shortener
        pathType: Prefix
        backend:
          service:
            name: go
            port:
              number: 80
